add db migrations

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,6 @@ PORT=3000
 DB_ROOT_PASSWORD=12345678
 DB_HOST=localhost
 DB_PORT=3307
-DB_DATABASE=blog_dev
+DB_DATABASE=database_name
 DB_USERNAME=dev
 DB_PASSWORD=test
