--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "blog-app",
-  "version": "0.0.1",
-  "description": "",
+  "name": "toeic-online-testing",
+  "version": "1.0.0",
+  "description": "Website for practicing and hosting toeic tests",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
@@ -37,7 +37,8 @@
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "mysql": "^2.18.1",
+    "dotenv": "^16.0.3",
+    "mysql2": "^2.3.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
