--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
 NODE_ENV=development
+PORT=3001
 JWT_SECRET=jskladaklfdas
-PORT=3000
+JWT_ACCESS_TOKEN_EXPIRES_IN=86400
+JWT_REFRESH_TOKEN_EXPIRES_IN=604800
+# Frontend base url
+API_CLIENT_BASE_URL=
 
 DB_ROOT_PASSWORD=12345678
 DB_HOST=localhost
@@ -8,3 +12,13 @@ DB_PORT=3307
 DB_DATABASE=database_name
 DB_USERNAME=dev
 DB_PASSWORD=test
+
+AWS_S3_BUCKET_REGION=
+AWS_S3_BUCKET_NAME=
+AWS_S3_ACCESS_KEY_ID=
+AWS_S3_SECRET_ACCESS_KEY=
+
+
+GOOGLE_OAUTH_CLIENT_ID=
+GOOGLE_OAUTH_CLIENT_SECRET=
+GOOGLE_OAUTH_REDIRECT_URL=
