--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.3",
     "lodash": "^4.17.21",
+    "moment-timezone": "^0.5.43",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
-    "passport-jwt": "^4.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -61,6 +63,7 @@
     "@types/lodash": "^4.14.194",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
+    "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-jwt": "^3.0.8",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^9.0.1",
