--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "experimentalDecorators": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
+    "typeRoots": ["./node_modules/@types", "./src/@types/**/*.ts"],
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "outDir": "./dist",
