--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ JWT_REFRESH_TOKEN_EXPIRES_IN=604800
 # Frontend base url
 API_CLIENT_BASE_URL=
 
+# default password for admin seed data
+ADMIN_USER_DEFAULT_PASSWORD=
+
 DB_ROOT_PASSWORD=12345678
 DB_HOST=localhost
 DB_PORT=3307
