[feat]: mail sending add base service

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,17 @@ AWS_S3_BUCKET_NAME=
 AWS_S3_ACCESS_KEY_ID=
 AWS_S3_SECRET_ACCESS_KEY=
 
+AWS_SES_ACCESS_KEY_ID=
+AWS_SES_SECRET_ACCESS_KEY=
+AWS_SES_REGION=
+AWS_SES_SOURCE_EMAIL=
+AWS_SES_EXAM_START_REMIND_TEMPLATE_NAME=
+
+AWS_SQS_ACCESS_KEY_ID=
+AWS_SQS_SECRET_ACCESS_KEY=
+AWS_SQS_REGION=
+AWS_SQS_MAIL_QUEUE_NAME=
+AWS_SQS_MAIL_QUEUE_URL=
 
 GOOGLE_OAUTH_CLIENT_ID=
 GOOGLE_OAUTH_CLIENT_SECRET=
