bugfix/timezone: fix timezone related bugs

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ DB_PORT=3307
 DB_DATABASE=database_name
 DB_USERNAME=dev
 DB_PASSWORD=test
+DB_TIMEZONE=Z
 
 AWS_S3_BUCKET_REGION=
 AWS_S3_BUCKET_NAME=
